Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_type_literal.flow
import "../../std/numbers.flow"

program bad_type_literal

main {
    impossible : PositiveInteger(0)
    print impossible
}
